add test for false positive when using instanceof pattern matching